--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -33,10 +33,12 @@
 -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
-    <storage android:mountPoint="/storage/sdcard0"
-             android:storageDescription="@string/storage_sd_card"
-             android:primary="true"
-             android:removable="true"
-             android:emulated="false"
-             android:allowMassStorage="true" />
+    <storage
+        android:mountPoint="/storage/sdcard0"
+        android:storageDescription="@string/storage_sd_card"
+        android:allowMassStorage="true"
+        android:emulated="false"
+        android:removable="true"
+        android:primary="true"
+        android:maxFileSize="4096" />     
 </StorageList>
