overlay: Override qcom/msm7x27's limitedAlpha setting
We like our animations ;)

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -108,4 +108,7 @@
         <!-- The Google Network Location Services location provider -->
         <item>com.google.android.location</item>
     </string-array>
+
+    <!-- Override value set in qcom/msm7x27 -->
+    <bool name="config_sf_limitedAlpha">false</bool>
 </resources>
