--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -109,6 +109,9 @@
         <item>com.google.android.location</item>
     </string-array>
 
+    <!-- Enables or disables fading edges when marquee is enabled in TextView. -->
+    <bool name="config_ui_enableFadingMarquee">false</bool>
+
     <!-- Override value set in qcom/msm7x27 -->
     <bool name="config_sf_limitedAlpha">false</bool>
 </resources>
